Added hierarchy viz

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,16 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "baseUrl": ".",
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules"],
+  "references": [],
+  "compilerOptions": {
+    "lib": ["DOM", "ES2015"],
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "types": [],
+    "noEmit": true,
+    "strictNullChecks": true
+  }
 }
