--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,10 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.85.0",
     "@visx/clip-path": "^3.3.0",
+    "@visx/group": "^3.12.0",
+    "@visx/hierarchy": "^3.12.0",
     "@visx/legend": "^3.10.3",
     "@visx/network": "^3.3.0",
     "@visx/responsive": "^3.10.2",
@@ -21,14 +24,19 @@
     "@visx/zoom": "^3.3.0",
     "d3": "^7.9.0",
     "d3-force": "^3.0.0",
+    "d3-hierarchy": "^3.1.2",
+    "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@tanstack/router-devtools": "^1.85.0",
+    "@tanstack/router-plugin": "^1.84.4",
     "@types/d3": "^7.4.3",
     "@types/d3-force": "^3.0.10",
+    "@types/d3-hierarchy": "^3.1.7",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
