Added func details table

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,6 +4,9 @@
   "references": [],
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "lib": ["DOM", "ES2015"],
     "jsx": "react-jsx",
     "jsxImportSource": "react",
