--- a/app/package.json
+++ b/app/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.85.0",
+    "@tanstack/react-table": "^8.20.5",
     "@visx/clip-path": "^3.3.0",
     "@visx/group": "^3.12.0",
     "@visx/hierarchy": "^3.12.0",
@@ -50,7 +51,8 @@
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
