--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "check-types": "tsc --noEmit"
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/router-devtools": "^1.85.0",
     "@tanstack/router-plugin": "^1.84.4",
     "@types/d3": "^7.4.3",
