--- a/backend-app/pyproject.toml
+++ b/backend-app/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 requests = "^2.32.3"
+fastapi = {extras = ["standard"], version = "^0.115.6"}
+pydantic-settings = "^2.7.1"
+google-cloud-secret-manager = "^2.22.0"
+google-cloud-storage = "^2.19.0"
 
 
 [build-system]
