--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,12 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-router": "^1.85.0",
     "@tanstack/react-table": "^8.20.5",
+    "@visx/axis": "^3.12.0",
     "@visx/clip-path": "^3.3.0",
+    "@visx/event": "^3.12.0",
     "@visx/group": "^3.12.0",
     "@visx/hierarchy": "^3.12.0",
     "@visx/legend": "^3.10.3",
@@ -29,6 +32,7 @@
     "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
