--- a/backend-app/Dockerfile
+++ b/backend-app/Dockerfile
@@ -22,8 +22,9 @@ COPY pyproject.toml poetry.lock ./
 # Install dependencies
 RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-root
 
-
-# Copy application code and SSH keys
+# Copy application code
 COPY . .
+
+EXPOSE 8080
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
