--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,22 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Python Debugger: FastAPI",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "uvicorn",
+      "args": ["app.main:app", "--reload"],
+      "jinja": true
+    },
+    {
       "name": "Python Debugger: Current File",
       "type": "debugpy",
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
-      "cwd": "${workspaceFolder}/retrieve"
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}/cloud-functions"
+      }
     }
   ]
 }
