--- a/backend-app/pyproject.toml
+++ b/backend-app/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["David Rojas <lempira@gmail.com>"]
 readme = "README.md"
 package-mode = false
 
-[virtualenvs]
-in-project=true
+[tool.poetry.virtualenvs]
+in-project = true
 
 
 [tool.poetry.dependencies]
@@ -17,6 +17,8 @@ fastapi = {extras = ["standard"], version = "^0.115.6"}
 pydantic-settings = "^2.7.1"
 google-cloud-secret-manager = "^2.22.0"
 google-cloud-storage = "^2.19.0"
+pydantic-ai = "^0.0.13"
+httpx = "^0.28.1"
 
 
 [build-system]
